updat on 2019/OCT/15

--- a/src/01-getting-started/index.html
+++ b/src/01-getting-started/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <!-- <link rel="stylesheet" href="./style1.css"> -->
     <title>FSD</title>
 </head>
 
@@ -50,7 +50,7 @@
     <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
         <div class="w3-display-middle" style="white-space:nowrap;">
             <div class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">
-                WELCOME TO <br> Full Stack Development
+                Welcome TO <br> Full Stack Development
             </div>
         </div>
     </div>
@@ -86,7 +86,29 @@
 
     <div class="bgimg-2 w3-display-container w3-opacity-min">
         <div class="w3-display-middle">
-            <span class="w3-xxlarge w3-text-white w3-wide">SIZE</span>
+            <span class="w3-xxlarge w3-text-white w3-wide">CALCULATOR</span>
+            <div class="calculator-keys">
+                <input id="input" type="text" value="" disabled /><br>
+                <input class="btn1" type="button"id="" value="←" /> 
+                <input class="btn2" type="button"id="" value="C" /><br>
+                <input class="btn" type="button"id="" value="1" />
+                <input class="btn" type="button"id="" value="2" />
+                <input class="btn" type="button"id="" value="3" />
+                <input class="btn4" type="button"id="" value="+" /><br>
+                <input class="btn" type="button"id="" value="4" />
+                <input class="btn" type="button"id="" value="5" />
+                <input class="btn" type="button"id="" value="6" />
+                <input class="btn4" type="button"id="" value="-" /><br>
+                <input class="btn" type="button"id="" value="7" />
+                <input class="btn" type="button"id="" value="8" />
+                <input class="btn" type="button"id="" value="9" />
+                <input class="btn4" type="button"id="" value="×" /><br>
+                <input class="btn" type="button"id="" value="." />
+                <input class="btn" type="button"id="" value="0" />
+                <input class="btn3" type="button"id="" value="="/>
+                <input class="btn4" type="button"id="" value="÷" /><br>
+            </div>
+            <script type="text/javascript" src="calculator2.js"></script>
         </div>
     </div>
 
@@ -112,6 +134,7 @@
 
 
     <script type="module" src="./scripts/main.js"></script>
+    <script type="text/javascript" src="./calculator2.js"></script>
 
     <script>
         // Change style of navbar on scroll
