update calculator function

--- a/src/01-getting-started/index.html
+++ b/src/01-getting-started/index.html
@@ -128,7 +128,7 @@
 
     <div class="bgimg-5 w3-display-container w3-opacity-min">
         <div class="w3-display-middle">
-            <span class="w3-xxlarge w3-text-white w3-wide">CANADIAN TAXES</span>
+            <span class="w3-xxlarge w3-text-white w3-wide taxpic">CANADIAN TAXES</span>
             
         </div>
     </div>
@@ -191,7 +191,7 @@
 
 
     <script type="module" src="./scripts/main.js"></script>
-    <script type="text/javascript" src="./calculator2.js"></script>
+    <!-- <script type="text/javascript" src="./calculator2.js"></script> -->
     <!-- <script type="text/javascript" src="./scripts/tax1.js"></script> -->
     <!-- <script type="text/javascript" src="./scripts/array.js"></script> -->
 
