update 2nd dom exercise

--- a/src/02-dom/index.html
+++ b/src/02-dom/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="win">
         <h1>Basic Dom</h1>
-        <p>&ensp;This is a lis of stuff<br>
+        <p>&ensp;This is a list of stuff<br>
         <ol id="apple">
 
         </ol>
@@ -21,6 +21,32 @@
             <button id="dom4">delete</button>
 
     </div>
+
+    <div class="bgimg-2 w3-display-container w3-opacity-min"></div>
+
+    <div class="next"><h1>Working with Cards</h1>
+
+    <div class="split left" id="left">
+        <button id="ac1">Add Card</button>
+        <div id=more>
+        <div id="insideLeft">
+            <!-- <p class="word">Card 1</p>
+            <button class ="ac" id="ac2">Add Before</button>
+            <button class ="ac" id="ac3">Add After</button><br>
+            <button class ="ac" id="ac4">Delete</button> -->
+            </div>
+        </div>
+      </div>
+      
+      <div class="split right">
+        <div class="insideRight">
+          <h2>right</h2>
+          
+        </div>
+      </div>
+    </div>
+
+
 
     <script type="module" src="./main.js"></script>
 </body>
