--- a/src/03-objects/index.html
+++ b/src/03-objects/index.html
@@ -56,5 +56,5 @@
       </div>
     </div>
   </body>
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="./scripts/main.js"></script>
 </html>
