finshed some event button

--- a/src/03-objects/scripts directory/index.html
+++ b/src/03-objects/scripts directory/index.html
@@ -29,6 +29,12 @@
         </td>
         <button class="int" id="btn1">Create</button>
         <hr class="hr" />
+        <td>Total Population: <span id="topop"></span></td>
+        <td>The Most Northern City: <span id="northern"></span></td>
+        <td>The Most Southern City: <span id="southern"></span></td>
+      </div>
+      <div id="cityList">
+        <h3>City list:</h3>
       </div>
     </div>
   </body>
