completed community & city

--- a/src/03-objects/scripts directory/index.html
+++ b/src/03-objects/scripts directory/index.html
@@ -13,25 +13,37 @@
       <div class="card">
         <td align="right">City Name:</td>
         <td align="left">
-          <input type="text" class="int" id="int1" />
+          <input type="text" class="int" id="int1" value="Taipei" />
         </td>
         <td align="right">Latitude:</td>
         <td align="left">
-          <input type="text" class="int" id="int2" />
+          <input type="text" class="int" id="int2" value="1234" />
         </td>
         <td align="right">Longitude:</td>
         <td align="left">
-          <input type="text" class="int" id="int3" />
+          <input type="text" class="int" id="int3" value="1234" />
         </td>
         <td align="right">Population:</td>
         <td align="left">
-          <input type="text" class="int" id="int4" />
+          <input type="text" class="int" id="int4" value="1234" />
         </td>
         <button class="int" id="btn1">Create</button>
         <hr class="hr" />
         <td>Total Population: <span id="topop"></span></td>
         <td>The Most Northern City: <span id="northern"></span></td>
         <td>The Most Southern City: <span id="southern"></span></td>
+        <hr class="hr" />
+        <input type="text" id="int5" />
+        <form>
+          <select name="your account" id="citySelect">
+            <!-- <option>Checking Account</option>
+            <option>Saving Account</option>
+            <option>RRSP</option>
+            <option>TFSA</option> -->
+          </select>
+        </form>
+        <button class="int" id="btn2">Move In</button>
+        <button class="int" id="btn3">Move Out</button>
       </div>
       <div id="cityList">
         <h3>City list:</h3>
