--- a/src/03-objects/scripts directory/index.html
+++ b/src/03-objects/scripts directory/index.html
@@ -13,19 +13,19 @@
       <div class="card">
         <td align="right">City Name:</td>
         <td align="left">
-          <input type="text" class="int" id="int1" value="Taipei" />
+          <input type="text" class="int" id="int1" />
         </td>
         <td align="right">Latitude:</td>
         <td align="left">
-          <input type="text" class="int" id="int2" value="1234" />
+          <input type="text" class="int" id="int2" />
         </td>
         <td align="right">Longitude:</td>
         <td align="left">
-          <input type="text" class="int" id="int3" value="1234" />
+          <input type="text" class="int" id="int3" />
         </td>
         <td align="right">Population:</td>
         <td align="left">
-          <input type="text" class="int" id="int4" value="1234" />
+          <input type="text" class="int" id="int4" />
         </td>
         <button class="int" id="btn1">Create</button>
         <hr class="hr" />
